[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Resources/Fonts/PlayMeGames-Demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Resources/Fonts/playmegames_36.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/Scenes/Levels/game_over.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/Menu Select.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="VBoxContainer" parent="."]
anchor_left = 0.0585938
anchor_top = 0.1
anchor_right = 0.941406
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="GameOver"]
margin_right = 904.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Game over"
align = 1
valign = 1

[node name="Button" type="Button" parent="GameOver"]
margin_top = 440.0
margin_right = 120.0
margin_bottom = 480.0
rect_min_size = Vector2( 120, 40 )
flat = true

[node name="Label" type="Label" parent="GameOver/Button"]
anchor_top = 2.911
anchor_bottom = 2.911
margin_top = -116.44
margin_right = 107.0
margin_bottom = -79.44
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0.694118, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "MENU"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelect" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource( 4 )
[connection signal="button_down" from="GameOver/Button" to="." method="_on_Button_button_down"]
[connection signal="gui_input" from="GameOver/Button" to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="GameOver/Button" to="." method="_on_Button_pressed"]
[connection signal="ready" from="GameOver/Button" to="." method="_on_Button_ready"]
